{
    "name": "Player",
    "maps": [
        {
            "name": "Player",
            "id": "6e43aadc-cb07-4abd-9c6a-cf1c4459147c",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "dacd9e8c-5685-4a61-b1d9-ea9e94cdebdf",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c5faf5d0-0b88-4e7c-a1c4-605460f60a98",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StopJump",
                    "type": "Button",
                    "id": "98b24c52-ac74-4ad3-906e-3dfd4a28545d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Magic1",
                    "type": "Button",
                    "id": "c2de7d0a-21c3-44eb-aa55-0dac8aadb71d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Magic2",
                    "type": "Button",
                    "id": "fceb4324-8c18-46eb-a672-e4c3687a5f27",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenWindow",
                    "type": "Button",
                    "id": "fdd2d2d2-2342-47a4-a5d8-e38b667c85f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector_Keyboard",
                    "id": "d74f73ad-2d6c-4bdd-a24b-4d8d1e0de184",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3d609af9-ebc6-4e4d-805b-b74d79164267",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "877695e8-11ee-4317-84e7-399905675a19",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b85df405-81cd-4680-8eb9-29725cd58576",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "49a21d8e-8b1b-49fe-b5fa-07d341e455f8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2186ba63-b5d6-4502-bf1e-fc4058bd1b2e",
                    "path": "<HID::SZMY-POWER CO.,LTD. EX10 GAMEPAD>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "925cd719-6517-466c-b7ec-3cdb30a794ff",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c7f21f9-1126-479a-81ea-c510047d7c2c",
                    "path": "<HID::SZMY-POWER CO.,LTD. EX10 GAMEPAD>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "613a21ed-3766-44dd-9cf5-fabfb6838d9b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ba3dafa-e796-4f4b-8aa6-0b3f9c63c4ac",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7628fabb-ebc4-48d0-a85b-bedca4f74a67",
                    "path": "<HID::SZMY-POWER CO.,LTD. EX10 GAMEPAD>/button2",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "StopJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e70c561-8f26-4d98-9be2-d132317a61a5",
                    "path": "<Keyboard>/space",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "StopJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "089e87df-1ebb-4bb6-b40a-a3d54b9aa8e8",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "StopJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13cbb73f-dcae-4ef1-a885-48c4e7b235cc",
                    "path": "<HID::SZMY-POWER CO.,LTD. EX10 GAMEPAD>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Magic1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0df30ce4-232e-4c7e-9b4b-5df1c5789bda",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Magic1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc19a409-e34e-4b9d-b09c-f42c468766ab",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Magic1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f63b95f-89c6-4348-baf6-fd9e5e8e71f6",
                    "path": "<HID::SZMY-POWER CO.,LTD. EX10 GAMEPAD>/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Magic2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08bc06d5-de17-40e2-9b5e-2bdffb651498",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Magic2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d43d47b1-ed62-4032-8b9a-34f23231f001",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Magic2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f25877d2-069a-4fd9-b1ff-6a956c70a6e5",
                    "path": "<HID::SZMY-POWER CO.,LTD. EX10 GAMEPAD>/button6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenWindow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8fab95dc-5101-4634-844d-8190eb0bb2db",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenWindow",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "9f1cbe66-a2c2-403f-9a61-33075f24aaf7",
            "actions": [
                {
                    "name": "Cursor",
                    "type": "Value",
                    "id": "dcbdd576-bb49-454b-aaf2-2cf42f948158",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Decision",
                    "type": "Button",
                    "id": "095b007e-d690-4eef-9ced-0adbc89ba8cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Open",
                    "type": "Button",
                    "id": "ed5fd306-079f-4b6a-bade-3c859b6dbc6f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "23b4c79c-d248-4d04-b51a-4036eb264063",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d97b505d-8ec0-4774-9ccd-63d23b1827c6",
                    "path": "<HID::SZMY-POWER CO.,LTD. EX10 GAMEPAD>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "dfe5346b-ad16-4856-9eb3-4419daa961e0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cursor",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "24a52294-5f0f-445d-9c0e-a39d4b239632",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c2d01781-cdd7-4d27-9635-f7e1c2a2d791",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4518b6de-7dcf-450f-8128-e198da95cb07",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0aa60710-a4aa-4a5f-a717-67a598281002",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "501df46f-a0a7-4a2f-9ab7-2395a6d702eb",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e25dcc8-5ca4-4f6b-87ee-a03f00bc1dcb",
                    "path": "<HID::SZMY-POWER CO.,LTD. EX10 GAMEPAD>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Decision",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05ecc1f0-b23c-4f6b-9b5a-285a95cd98ae",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Decision",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df4bf1bb-8c1d-4c42-a0a4-ca5630adf6d5",
                    "path": "<HID::SZMY-POWER CO.,LTD. EX10 GAMEPAD>/button6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0cc63d44-14a6-47e7-a8c9-5edf7fb0444f",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "150a7da3-4cb4-4010-9908-d52ef7322d8b",
                    "path": "<HID::SZMY-POWER CO.,LTD. EX10 GAMEPAD>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84aac823-47b6-4ebb-862c-5b533a5dfe9c",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}